--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Trivia Game</title>
+    <link rel="stylesheet" href="assets/css/reset.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 	
     <div id="wrapper">
-    	<h1>Marvel Trivia</h1>
+    	<h1>Totally Marvel Trivia</h1>
 
     	<button class='gameBtn'>Start</button>
 
@@ -30,7 +31,7 @@
 			<input type="radio" name="shapeshifter" value="mystique"> Mystique
 			<input type="radio" name="shapeshifter" value="beast"> Beast <br>
 
-			<p>What new superhero did we meet in Captain America: - Civil War?</p>
+			<p>What new superhero appeared in Captain America: - Civil War?</p>
 			<input type="radio" name="newName" value="deadpool"> Deadpool
 			<input type="radio" name="newName" value="ms"> Ms Marvel
 			<input type="radio" name="newName" value="panther"> Black Panther <br>
@@ -40,15 +41,34 @@
 			<input type="radio" name="planet" value="ultron"> Ultron
 			<input type="radio" name="planet" value="asgard"> Asgard <br>
 
+			<P>What is the Black Widow's real name?</P>
+			<input type="radio" name="wname" value="natalia">Natalia Romanova
+			<input type="radio" name="wname" value="natasha"> Natasha Alianovna 
+			<input type="radio" name="wname" value="scarlet"> Scarlet Romanoff<br>
+
+			<P>What is the Winter Soldier's name?</P>
+			<input type="radio" name="soldier" value="steve"> Steve Rogers
+			<input type="radio" name="soldier" value="bucky"> Bucky Barnes
+			<input type="radio" name="soldier" value="peter"> Peter Parker <br>
+
+			<P>In The Amazing Spider-Man who does Peter Parker love?</P>
+			<input type="radio" name="love" value="emma"> Emma Stone
+			<input type="radio" name="love" value="gwen"> Gwen Stacy
+			<input type="radio" name="love" value="maryjane"> Mary Jane <br>
+
 			<P>Who is Loki's father?</P>
 			<input type="radio" name="father" value="odin">Odin, Asgard King
 			<input type="radio" name="father" value="laufey"> Laufey, Frost Giant 
-			<input type="radio" name="father" value="malekith"> Malekith, Dark Elf<br><br>
+			<input type="radio" name="father" value="malekith"> Malekith, Dark Elf<br>
+			
+			<P>Who is Charles Xavier's archnemesis?</P>
+			<input type="radio" name="nemesis" value="beast"> Beast
+			<input type="radio" name="nemesis" value="cyclops"> Cyclops
+			<input type="radio" name="nemesis" value="magneto"> Magneto <br><br>
 
 		</form>
 		</div> <!-- end of formDisplay -->
 	</div> <!--end of wrapper-->	
-
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
